<resources>
    <string name="app_name">PetsCare</string>
    <string name="started_title">Welcome to PetsCare!</string>
    <string name="login_title">Login to app</string>
    <string name="register_title">Register to app</string>
    <string name="second_title">Nice to meet you!</string>
    <string name="hint_name">Enter your name</string>
    <string name="second_login_title">Login if you already have account</string>
    <string name="second_register_title">Register if you don`t have account</string>
    <string name="dont_have_acc">I don\'t have an account <font color="#FFAF5F9B">Register</font></string>
    <string name="have_acc">Are you have an account? <font color="#FFAF5F9B">Login</font></string>
    <string name="images_pets">Pets images</string>
    <string name="register_button">Register</string>
    <string name="login_button">login</string>
    <string name="logout_button">log out</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="hint_email">Enter your email</string>
    <string name="hint_password">Enter your password</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="home">home</string>
    <string name="my_profile">pet passport</string>
    <string name="enter_notes">Enter your notes</string>
    <string name="enter_name">Enter note\'s name</string>
    <string name="notes">notes</string>
    <string name="add_note">add note</string>
    <string name="update_note">update note</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="posts">posts</string>


</resources>