<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@color/white"
    android:padding="20dp"
    >

    <TextView
        android:id="@+id/login_title"
        android:layout_width="364dp"
        android:layout_height="50dp"
        android:layout_marginTop="80dp"
        android:text="@string/login_title"
        android:textColor="@color/primary"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/second_login_title"
        android:layout_width="355dp"
        android:layout_height="648dp"
        android:layout_marginTop="95dp"
        android:text="@string/second_login_title"
        android:textColor="@color/primary"
        android:textSize="23sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.6" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_parent"
        android:layout_marginTop="216dp"
        android:hint="@string/hint_email"
        android:textColorHint="@color/primary"
        app:startIconTint="@color/primary"
        app:hintTextColor="@color/primary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/second_login_title"
        app:startIconDrawable="@drawable/ic_baseline_email_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="53dp"
            android:background="@color/white"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_password"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_parent"
        android:layout_marginTop="304dp"
        android:hint="@string/hint_password"
        android:textColorHint="@color/primary"
        app:startIconTint="@color/primary"
        app:hintTextColor="@color/primary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/second_login_title"
        app:startIconDrawable="@drawable/ic_baseline_lock_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="53dp"
            android:background="@color/white"
            />
    </com.google.android.material.textfield.TextInputLayout>



    <com.google.android.material.button.MaterialButton
        android:id="@+id/login_button"
        android:layout_width="373dp"
        android:layout_height="62dp"
        android:layout_marginBottom="136dp"
        android:text="@string/login_button"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:backgroundTint="@color/primary"
        app:cornerRadius="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/second_login_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.526"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/dont_acc"
        android:layout_width="360dp"
        android:layout_height="0dp"
        android:layout_marginTop="648dp"
        android:layout_marginLeft="65dp"
        android:text="@string/dont_have_acc"
        android:textColor="@color/primary"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.686"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>