<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".auth.MainActivity"
    android:background="@color/white"
    android:padding="20dp">

  <TextView
      android:id="@+id/started_title"
      android:layout_width="445dp"
      android:layout_height="889dp"
      android:layout_marginTop="40dp"
      android:text="@string/started_title"
      android:textColor="@color/primary"
      android:textSize="30sp"
      android:textStyle="bold"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <TextView
      android:id="@+id/second_title"
      android:layout_width="304dp"
      android:layout_height="797dp"
      android:layout_marginTop="90dp"
      android:text="@string/second_title"
      android:textColor="@color/primary"
      android:textSize="25sp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.0" />

  <ImageView
      android:id="@+id/img_main"
      android:layout_width="311dp"
      android:layout_height="409dp"
      android:layout_marginTop="128dp"
      android:src="@drawable/pets"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.396"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <com.google.android.material.button.MaterialButton
      android:id="@+id/register_button"
      android:layout_width="375dp"
      android:layout_height="61dp"
      android:layout_marginBottom="228dp"
      android:text="@string/register_button"
      android:textColor="@color/white"
      android:textSize="15sp"
      app:backgroundTint="@color/shadow_primary"
      app:layout_constraintBottom_toBottomOf="@+id/started_title"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.444"
      app:layout_constraintStart_toStartOf="parent"
      app:cornerRadius="20sp"
      />

  <com.google.android.material.button.MaterialButton
      android:id="@+id/login_button"
      android:layout_width="373dp"
      android:layout_height="62dp"
      android:layout_marginBottom="300dp"
      android:text="@string/login_button"
      android:textColor="@color/white"
      android:textSize="15sp"
      app:cornerRadius="20sp"
      app:backgroundTint="@color/primary"
      app:layout_constraintBottom_toBottomOf="@+id/started_title"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.487"
      app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>